--- a/index.html
+++ b/index.html
@@ -7,7 +7,44 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/18.2.0/umd/react-dom.production.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/7.23.9/babel.min.js"></script>
 <script>
-window.storage={async get(key){var v=localStorage.getItem('sc:'+key);if(v===null)throw new Error('Key not found');return{key:key,value:v,shared:false}},async set(key,value){localStorage.setItem('sc:'+key,value);return{key:key,value:value,shared:false}},async delete(key){localStorage.removeItem('sc:'+key);return{key:key,deleted:true,shared:false}},async list(prefix){var keys=[];for(var i=0;i<localStorage.length;i++){var k=localStorage.key(i);if(k.startsWith('sc:')){var s=k.substring(3);if(!prefix||s.startsWith(prefix))keys.push(s)}}return{keys:keys,prefix:prefix,shared:false}}};
+window.storage=(function(){
+  var API='/.netlify/functions/storage-proxy';
+  async function call(body){
+    var r=await fetch(API,{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify(body)});
+    var d=await r.json();
+    if(!r.ok)throw new Error(d.error||'Storage error');
+    return d;
+  }
+  var migrated=false;
+  async function migrate(){
+    if(migrated)return;migrated=true;
+    try{
+      // Check if cloud already has data (session key = good indicator)
+      var test=await call({action:'list',prefix:'session'});
+      if(test.keys&&test.keys.length>0)return; // cloud has data, skip migration
+    }catch(e){return;}
+    // Collect all localStorage sc: keys
+    var entries=[];
+    for(var i=0;i<localStorage.length;i++){
+      var k=localStorage.key(i);
+      if(k&&k.startsWith('sc:')){entries.push({key:k.substring(3),value:localStorage.getItem(k)});}
+    }
+    if(entries.length===0)return;
+    try{
+      await call({action:'set-batch',entries:entries});
+      console.log('Migrated '+entries.length+' keys to cloud storage');
+    }catch(e){console.warn('Migration failed:',e);}
+  }
+  // Trigger migration on first storage call
+  var migP=null;
+  function ensureMigrated(){if(!migP)migP=migrate();return migP;}
+  return{
+    async get(key){await ensureMigrated();var d=await call({action:'get',key:key});return{key:d.key,value:d.value,shared:false};},
+    async set(key,value){await ensureMigrated();await call({action:'set',key:key,value:value});return{key:key,value:value,shared:false};},
+    async delete(key){await ensureMigrated();await call({action:'delete',key:key});return{key:key,deleted:true,shared:false};},
+    async list(prefix){await ensureMigrated();var d=await call({action:'list',prefix:prefix||''});return{keys:d.keys||[],prefix:prefix,shared:false};}
+  };
+})();
 </script><script type="text/babel">
 const { useState, useEffect, useCallback, useRef } = React;
 
@@ -670,6 +707,8 @@ window.ScheduleHelper = function StaffScheduler() {
   }
 
   async function handleDevLogin() {
+    const devPw = prompt('Developer password:');
+    if (devPw !== DEV_PASSWORD) { alert('Wrong password'); return; }
     const u = { username: DEV_USERNAME, isDev: true, created: Date.now() };
     await window.storage.set('session', JSON.stringify(u));
     setUser(u); setIsDev(true);
@@ -708,6 +747,7 @@ window.ScheduleHelper = function StaffScheduler() {
     } else {
       await loadUserData(DEV_USERNAME);
     }
+    await ensureCveAccount();
   }
 
   async function resetDevData() {
@@ -719,6 +759,23 @@ window.ScheduleHelper = function StaffScheduler() {
     await window.storage.set(`${DEV_USERNAME}:holidays`, JSON.stringify(PRESET_HOLIDAYS));
     await window.storage.set(`${DEV_USERNAME}:vacations`, JSON.stringify([]));
     await window.storage.set(`${DEV_USERNAME}:schedules`, JSON.stringify({}));
+
+  // Ensure CVE user account exists with a copy of dev data
+  async function ensureCveAccount() {
+    const CVE_USER = 'cve';
+    const CVE_PASS = 'brandy';
+    try { await window.storage.get(`user:${CVE_USER}`); return; } catch(e) {} // already exists
+    // Create user record
+    await window.storage.set(`user:${CVE_USER}`, JSON.stringify({ username: CVE_USER, password: CVE_PASS, created: Date.now() }));
+    // Copy all dev data to cve namespace
+    const keys = ['staff','locations','rules','holidays','vacations','schedules','finalPlans'];
+    for (const key of keys) {
+      try {
+        const data = await window.storage.get(`${DEV_USERNAME}:${key}`);
+        if (data) await window.storage.set(`${CVE_USER}:${key}`, data.value);
+      } catch(e) {}
+    }
+  }
   }
 
   async function logout() {
@@ -1482,7 +1539,7 @@ For questions (not changes), just respond normally without action blocks. Be con
     locations.forEach(l => { const n = l.name; locAbbrev[l.id] = n.length <= 10 ? n : n.split(/[\s\-\/]+/)[0]; });
 
     const rows = Math.ceil(calDays.length / 7);
-    const scaleFactor = rows <= 4 ? 1.5 : rows <= 5 ? 1.25 : 1.05;
+    const scaleFactor = rows <= 4 ? 1.4 : rows <= 5 ? 1.15 : 0.95;
     const provScale = providerCount > 8 ? 0.88 : providerCount > 6 ? 0.95 : 1.0;
     const baseFont = 9.5 * scaleFactor * provScale;
     const nameFont = baseFont;
@@ -1530,12 +1587,12 @@ For questions (not changes), just respond normally without action blocks. Be con
     let html = '<!DOCTYPE html><html><head><meta charset="utf-8"><title>' + MONTHS[currentMonth] + ' ' + currentYear + ' Schedule</title>';
     html += '<style>@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;600;700&display=swap");';
     html += '*{margin:0;padding:0;box-sizing:border-box}';
-    html += '@page{size:landscape;margin:5mm 6mm}';
+    html += '@page{size:landscape;margin:4mm 5mm}';
     html += 'body{font-family:"DM Sans",Arial,sans-serif;background:#fff;color:#222;-webkit-print-color-adjust:exact;print-color-adjust:exact}';
-    html += '.hdr{display:flex;justify-content:space-between;align-items:baseline;margin-bottom:3px}';
-    html += 'h1{font-size:16px;font-weight:700}';
-    html += '.sub{font-size:9px;color:#666}.plan{font-size:9px;color:#1a5;font-weight:700;background:#e6f9f0;padding:1px 6px;border-radius:3px}';
-    html += '.legend{display:flex;flex-wrap:wrap;gap:4px 10px;margin-bottom:4px;padding:3px 8px;background:#f5f5f5;border-radius:3px;border:1px solid #e0e0e0}';
+    html += '.hdr{display:flex;justify-content:space-between;align-items:baseline;margin-bottom:2px}';
+    html += 'h1{font-size:14px;font-weight:700}';
+    html += '.sub{font-size:8px;color:#666}.plan{font-size:8px;color:#1a5;font-weight:700;background:#e6f9f0;padding:1px 5px;border-radius:3px}';
+    html += '.legend{display:flex;flex-wrap:wrap;gap:3px 8px;margin-bottom:3px;padding:2px 6px;background:#f5f5f5;border-radius:3px;border:1px solid #e0e0e0}';
     html += '.li{display:flex;align-items:center;gap:3px;font-size:' + Math.max(9,baseFont*0.8) + 'px;font-weight:600}';
     html += '.ld{width:7px;height:7px;border-radius:50%;flex-shrink:0}';
     html += 'table{width:100%;border-collapse:collapse;table-layout:fixed}';
